# BriskNet

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  architecture.md
benchmark/: kernel_udp_receiver  kernel_udp_receiver.c  udp_sender  udp_sender.c
bpf/: xdp_redirect.bpf.c
include/: af_xdp_socket.h  lfqueue_wrapper.h  packet_parser.h  tcp_flow.h  umem.h
scripts/: run_benchmark.sh
src/: af_xdp_socket.c  lfqueue_wrapper.cpp  main.c  packet_parser.c  umem.c
